2004-03-29  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* configure.in: version to 'development'
	* ChangeLog.2: Add
	* ChangeLog : Wipe

For the changes before 2.13.0, see ChangeLog.2